feat: add patch script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "https://github.com/l3ob/postcss-uni-px2rpx.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "patch": "npm version patch && npm publish --registry https://registry.npmjs.org"
   },
   "keywords": [],
   "author": "",
